fixing layout issues for posts

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -89,3 +89,4 @@ h1 { font-size: 3em;  }
 h2 { font-size: 2.7em; }
 h3 { font-size: 2.3em; }
 h4 { font-size: 1.9em; }
+p { max-width: 48rem; }
